--- a/css_code.css
+++ b/css_code.css
@@ -1,8 +1,8 @@
 p{
     color-adjust: blue;
-    color: rgb(216, 75, 10);
+    color: rgb(10, 31, 216));
     background-color: aliceblue;
 }
 body{
-    background-color: olivedrab;
+    background-color: rgb(53, 35, 142);
 }
