--- a/css_code.css
+++ b/css_code.css
@@ -1,6 +1,6 @@
 p{
     color-adjust: blue;
-    color: rgb(10, 31, 216));
+    color: rgb(10, 31, 216);
     background-color: aliceblue;
 }
 body{
